# contract-hello-world-state

./: .gitignore  README.md  samconfig.toml  template.yaml
rust_app/: Cargo.toml
rust_app/src/: main.rs  utils.rs
rust_app/src/lib/: mod.rs  org_accordproject_helloworldstate.rs  org_accordproject_runtime.rs  utils.rs
