[package]
name = "contract-hello-world-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
chrono = "0.4.25"

lambda_runtime = "0.8.0"
reqwest = { version = "0.11.18", features = ["json"]}
serde = "1.0.136"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
openssl = { version = "0.10", features = ["vendored"] }

[lib]
path = "src/lib/mod.rs"
name = "lib"
